--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -901,45 +901,17 @@ ul.users li a {
     #cookies_warning {
         padding: 2px 10px 2px;
     }
-    
-    #sticky-footer {
-      height: 200px;
-    }
-    
-    #main-body-content {
-       padding-bottom: 200px;
-    }
-    
   
 }
 
 /* Tablet and above 
 -------------------------*/
 @media (min-width: 768px) {
-  #sticky-footer {
-    height: 120px;
-  }
   
-  #main-body-content {
-    padding-bottom: 120px;
-  }
-  
-  #sticky-footer ul {
-    width: 100%;
-    text-align: center;
-  }
-
-  #sticky-footer li {
-    text-align: center;
-    display: inline-block;
-  }
   
   .sticky-footer-col {
     height: 100px;
-  }
-  
-  .footer-links {
-    display: inline;
+    padding-top: 0px;
   }
 
   .img-dialog {
@@ -956,7 +928,16 @@ ul.users li a {
  * Footer
  */
   
+  .footer-links {
+    display: inline;
+  }
+  
+  .sticky-footer-col {
+    padding-top: 10px;
+  }
+  
 #sticky-footer {
+  height: 120px;
     margin-top: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -971,7 +952,19 @@ ul.users li a {
 #sticky-footer ul {
     color: #7B7B7B;
     list-style: none;
-    padding:0; margin:0;
+    padding:0;
+    margin:0;
+    width: 100%;
+    text-align: center;
+}
+
+#main-body-content {
+    padding-bottom: 120px;
+}
+
+#sticky-footer li {
+    text-align: center;
+    display: inline-block;
 }
 
 #sticky-footer li > a {
@@ -1718,6 +1711,7 @@ ul.polaroids .polaroid img {
 .shadow-circle {
   border-top: 1px solid #ECEDED;
   border-radius: 50%;
+  display: inline-block;
 }
 
 .shadow-circle::before {
@@ -1762,12 +1756,11 @@ ul.polaroids .polaroid img {
 }
 
 .box-shadow-grey {
-  border-top: 1px solid #ECEDED;
-  border-bottom: 1px solid #ECEDED;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.2);
-  -moz-box-shadow: 0 2px 4px rgba(0,0,0,.2);
+  box-shadow: 0px 0px 3px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
+  -moz-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
   z-index: 1;
+  border: 1px solid rgba(255,255,255,0.5);
 }
 
 .border-radius-sm{
@@ -1876,4 +1869,30 @@ background-color: rgba(0,0,0,0.05);
 
 .table-striped>tbody>tr:nth-of-type(odd) {
 background-color: rgba(255,255,255,1);
+}
+
+.table-condensed>tbody>tr>td,
+.table-condensed>tbody>tr>th,
+.table-condensed>tfoot>tr>td,
+.table-condensed>tfoot>tr>th,
+.table-condensed>thead>tr>td,
+.table-condensed>thead>tr>th {
+  padding: 5px 15px 5px;
+}
+
+
+
+.well {
+border-radius: 6px;
+background-image: url(../img/patterns/brushed.png);
+text-shadow: #efefef 0.5px 0.5px 0px;
+font-weight: 300;
+color: #777777;
+border-top: 1px solid #ECEDED;
+border-bottom: 1px solid #ECEDED;
+box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+-webkit-box-shadow: 1px 0px 3px rgba(0,0,0,.2);
+-moz-box-shadow: 0 2px 4px rgba(0,0,0,.2);
+z-index: 1;
+border: 1px solid rgba(255,255,255,0.5);
 }
