--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,12 +1,18 @@
 <div class="container">
     <div class="row center">
-        <div class="col-sm-3 vcenter hcenter sticky-footer-col">
-            <a href="http://bl.uk/">
+        <div class="col-sm-3 col-xs-12 vcenter hcenter sticky-footer-col">
+            <a href="http://bl.uk/" class="hidden-xs">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
             </a>
+            <div class="col-xs-6 hidden-sm hidden-md hidden-lg">
+                <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
+            </div>
+            <div class="col-xs-6 hidden-sm hidden-md hidden-lg">
+                <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
+            </div>
         </div>
         
-        <div class="col-sm-6 vcenter hcenter hcenter sticky-footer-col">
+        <div class="col-sm-6 vcenter hcenter sticky-footer-col">
         {% if not enforce_privacy %}
       
             <div class="row">
@@ -30,7 +36,7 @@
         {% endif %}
         </div>
         
-        <div class="col-sm-3 vcenter hcenter sticky-footer-col">
+        <div class="col-sm-3 vcenter hcenter sticky-footer-col hidden-xs">
             <a href="http://pybossa.com/">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
             </a>
