--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -88,7 +88,7 @@
         
             
             
-            <p><i class="fa fa-clock-o"></i> {{ _('Joined') }}: <div class="format-date" data-date="{{user.created}}"></div></p>
+            <p><i class="fa fa-clock-o"></i> {{ _('Joined') }}: <span class="format-date" data-date="{{user.created}}"></span></p>
         
             {% if private %}
             <a href="{{ url_for('account.update_profile', name=user.name) }}" class="btn btn-default btn-sm btn-padded"><i class="fa fa-user"></i> {{ _('Edit') }}</a>
