--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -7,13 +7,13 @@
     <div class="row">
         <div class="col-md-12">
             {% include "_flash_messages.html" %}
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-sm-6 col-sm-offset-3">
                 <div class="white-rounded inset-shadow-white">
                     <h2>{{ _('Great, just one more step!') }}</h2>
                     <p>{{ _("In order to confirm your identity, we've sent an email to the address you just provided. Please, check it out and click on the link to finish creating your account at") }} {{ config.BRAND }}.</p>
                     <p>{{ _("If you have not received the email in the next couple of minutes, please check the junk folder. If it's not there drop us an email at") }} <a href="mailto:issues@libcrowds.com">issues@libcrowds.com</a>.</p>
                     <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse"> 
-                    <i class="glyphicon glyphicon-home"></i>Go Home</a>
+                    <i class="glyphicon glyphicon-home"></i> Home</a>
                 </div>
             </div>
         </div>
