--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,10 @@
     <!-- Le styles -->
     <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.0.4" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.0.5" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+    <link href="{{url_for('static', filename='vendor/browser-detection/browser-detection.css')}}" rel="stylesheet" type="text/css" media="screen" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -32,11 +33,25 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection/browser-detection.js')}}" />
+  
+
     <!-- Google Analytics or similar solutions -->
     {% include '_ga.html' ignore missing %}
     <!-- Google Custom Search -->
     {% include '_gcs.html' ignore missing %}
+    <!-- Out of Date Browser Detection -->
+    <script>
+      <!--
+      var notSupportedBrowsers = [{'os': 'Any', 'browser': 'MSIE', 'version': 8}, {'os': 'Any', 'browser': 'Firefox', 'version': 1}];
+      var noticeLangCustom = {
+      "title": "Whoaaa!",
+      "notice": "You're still using {browser.name}? Unfortunately, LibCrowds is not compatible with this dinosaur of a browser. If you choose to continue without upgrading your experience while using this website is likely to be deeply unpleasant.",
+      "selectBrowser": "We strong recommend you upgrade now, thank you :)",
+      "remindMeLater": "",
+      "neverRemindAgain": "" };
+      // -->
+    </script>
     
   </head>
 
