--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,17 +162,17 @@ ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px
 #sticky-footer li{text-align:center;display:inline-block}
 #sticky-footer li > a{color:#777;transition:color 100ms;-webkit-transition:color 100ms;-ms-transition:color 100ms;-moz-transition:color 100ms;-o-transition:color 100ms}
 #sticky-footer li > a:hover{color:#D00000;text-decoration:none}
-#browser-detection{background:#FFF;color:#333;position:fixed;_position:fixed;top:25%;left:25%;border-radius:5px;border:1px solid #D6D6C1;-moz-border-radius:5px;width:50%;z-index:1001;padding:10px 15px}
+#browser-detection{background:#FFF;color:#333;position:fixed;_position:fixed;top:25%;left:25%;border-radius:5px;border:1px solid #D6D6C1;-moz-border-radius:5px;width:50%;z-index:1001;padding:10px 20px}
 #browser-detection P{background:transparent;line-height:135%;width:auto;float:none;border:none;text-align:left;margin:0;padding:0}
 #browser-detection P.bd-title{padding-top:0;font-size:25px;line-height:100%}
 #browser-detection P.bd-notice{padding-bottom:5px;padding-top:5px}
 #browser-detection SPAN.bd-highlight{color:#B50E0E}
 #browser-detection A#browser-detection-close{width:15px;height:15px;outline:none;position:absolute;right:10px;top:10px;text-indent:-500em;line-height:100%;background:url(./images/close.gif) no-repeat center center}
 #browser-detection A#browser-detection-close:HOVER{background-color:#F5F5DC}
-#browser-detection UL.bd-browsers-list,#browser-detection UL.bd-browsers-list LI,#browser-detection UL.bd-skip-buttons,#browser-detection UL.bd-skip-buttons LI{font-size:10px;list-style:none;margin:0;padding:0}
+#browser-detection UL.bd-browsers-list,#browser-detection UL.bd-browsers-list LI,#browser-detection UL.bd-skip-buttons,#browser-detection UL.bd-skip-buttons LI{font-size:10px;list-style:none;margin:0;padding:0;padding-top:20px;padding-bottom:20px;}
 #browser-detection UL.bd-browsers-list{clear:both;margin-top:3px;border-top:1px solid #F5F5DC;border-bottom:1px solid #F5F5DC;width:100%;padding:7px 0;display:table}
 #browser-detection UL.bd-browsers-list LI{text-align:left;display:inline-block}
-#browser-detection UL.bd-browsers-list LI A{width:60px;height:55px;display:block;color:#666;text-decoration:none;padding:10px 10px 0 65px}
+#browser-detection UL.bd-browsers-list LI A{width:100px;height:55px;display:block;color:#666;text-decoration:none;padding:10px 10px 0 65px}
 #browser-detection UL.bd-browsers-list LI.firefox A{background:url(../img/firefox.gif) no-repeat left top}
 #browser-detection UL.bd-browsers-list LI.chrome A{background:url(../img/chrome.gif) no-repeat left top}
 #browser-detection UL.bd-browsers-list LI.safari A{background:url(../img/safari.gif) no-repeat left top}
