--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection.js')}}" />
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection.js')}}" ></script>
   
 
     <!-- Google Analytics or similar solutions -->
