--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -123,7 +123,7 @@
         </div>
         
             <div class="col-md-1 hidden-sm hidden-xs same-size">
-                <div class="meter inset-shadow-white pull-right"><span data-progress="{{ app.overall_progress | round | int }}" data-app="{{app.short_name}}"><span><span></span></span></div>
+                <div class="meter inset-shadow-white pull-right"><span data-progress="{{ app.overall_progress | round | int }}" data-app="{{app.short_name}}"><span></span></span></div>
             </div>
         
             <div class="col-sm-3 hidden-sm hidden-xs same-size" id="show-app-stats">
