--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -41,7 +41,7 @@
                                 
                                 <div class="modal-footer">
                                     <div class="form-actions text-center">
-                                        <button type="submit" id="upload-btn" name='btn' value="Upload" class="btn btn-primary btn-lg" />{{ _('Upload') }}</button>
+                                        <button type="submit" id="upload-btn" name='btn' value="Upload" class="btn btn-primary btn-lg" >{{ _('Upload') }}</button>
                                     </div>
                                 </div>
                             </div>
